WE 7 added final map

--- a/vignettes/Week7_Spatial_Linear_Models/Week7_vignette.Rmd
+++ b/vignettes/Week7_Spatial_Linear_Models/Week7_vignette.Rmd
@@ -92,7 +92,9 @@ When fitting linear models, it is always a good idea to look at the correlations
 ```{r fig.height=5, fig.width=7}
 Dianthus.df <- data.frame(A=Dianthus@data$A, IBD=Dianthus@data$Eu_pj, 
                           IBR=Dianthus@data$Sheint_pj,
-                          PatchSize=log(Dianthus@data$Ha), 
+                          PatchSize=log(Dianthus@data$Ha),
+                          Longitude=Dianthus@data$Longitude,
+                          Latitude=Dianthus@data$Latitude,
                           x=Dianthus@coords[,1], y=Dianthus@coords[,2])
 Dianthus.df <- Dianthus.df[!is.na(Dianthus.df$A),]
 dim(Dianthus.df)
@@ -604,12 +606,13 @@ summary( rv_res$p_vc )
 
 Also, a larger proportion of sites nows has p-values < 0.05.
 
-```{r}
+```{r fig.height=6, fig.width=7}
 Result <- data.frame(Dianthus.df, b=rv_res$b_vc, p=rv_res$p_vc, resid=rv_res$resid)
 names(Result)
 
-ggplot(as.data.frame(Result), aes(x, y, col=p.V1 < 0.05, size=b.V1)) +
-  geom_point() + coord_fixed()
+ggmap::qmplot(x =  Longitude, y = Latitude, data = Result,
+              source = "google", maptype = "terrain", zoom = 12) +
+  geom_point(aes(col=p.V1 < 0.05, size=b.V1))
 ```
 
 This is a very different map of results!
