Update WE 6-8 from LandGenCourse

--- a/vignettes/Week6_Selection/Week6_vignette.Rmd
+++ b/vignettes/Week6_Selection/Week6_vignette.Rmd
@@ -56,7 +56,7 @@ library(tibble)
 Package 'ggeffects' not automatically installed with 'LandGenCourse':
 
 ```{r message=FALSE, warning=TRUE}
-if(!require(ggeffects)) install.packages("ggeffects")
+if(!require(ggeffects)) install.packages("ggeffects", repos='http://cran.us.r-project.org')
 ```
 
 Source two files with additional functions:
